# VaultRelayClientSide

./: .gitignore  README.md
libsignal/rust/protocol/src/: lib.rs  storage.rs
signal-wasm-bridge/: Cargo.toml
signal-wasm-bridge/src/: lib.rs  store.rs
signal-wasm-bridge/tests/: lib_test.rs
vault-relay-frontend/: index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
vault-relay-frontend/src/: App.jsx  main.jsx
vault-relay-frontend/src/components/: AttachmentViewer.jsx  CreateGroupModal.jsx  Footer.jsx  MessageContextMenu.jsx  ProtectedRoute.jsx  SideNavBar.jsx
vault-relay-frontend/src/components/Contacts/: AddFriendForm.jsx  BlockedUserListItem.jsx  ContactDetailView.jsx  ContactListItem.jsx  FriendRequestCard.jsx  UserFriendCode.jsx
vault-relay-frontend/src/components/Messages/: ActiveChatHeader.jsx  AttachmentViewer.jsx  ConversationListItem.jsx  ConversationSidebar.jsx  CreateGroupModal.jsx  EmojiPickerButton.jsx  MediaGalleryPanel.jsx  MessageBubble.jsx  MessageComposer.jsx  MessageContextMenu.jsx  ReactionPicker.jsx
vault-relay-frontend/src/components/Settings/: LinkedDevices.jsx
vault-relay-frontend/src/components/Shared/: Navbar.jsx  (+3 more)
vault-relay-frontend/src/contexts/: AuthContext.jsx  ToastContext.jsx
vault-relay-frontend/src/hooks/: messageActions.js  messageProcessing.js  messageSending.js  reactionSending.js  useContactActions.js  useConversations.js  useFriends.js  useGroupSignalSession.js  useMessagePage.js  useMessages.js  useSignalSession.js
vault-relay-frontend/src/lib/: eventLog.js
vault-relay-frontend/src/pages/: Contacts.jsx  Home.jsx  Login.jsx  Messages.jsx  Register.jsx  StorageInfo.jsx  UserSetting.jsx
vault-relay-frontend/src/services/: authService.js  chatService.js  socketClient.js
vault-relay-frontend/src/styles/: main.css
vault-relay-frontend/src/test/: setup.js
vault-relay-frontend/src/utils/: conversationUtils.js  timeFormat.js
(+9 files in other folders)
