[package]
name = "signal-wasm-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
base64 = "0.21"
hex = "0.4"
uuid = { version = "1.4", features = ["v4", "js"] }
async-trait = "0.1.79"
rand = "0.9"

# Dependency on local protocol implementation
[dependencies.libsignal-protocol]
path = "../libsignal/rust/protocol"
default-features = false

[dependencies.libsignal-core]
path = "../libsignal/rust/core"
default-features = false

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.getrandom_v3]
package = "getrandom"
version = "0.3"
features = ["wasm_js"]

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Crypto",
    "SubtleCrypto",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1


